# trading_view

./: .gitignore  TODO.md
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/src/: main.rs  models.rs
backend/src/api/: error.rs  mod.rs  models.rs  ohlc_api.rs
backend/src/entity/: backtest_result.rs  indicator_data.rs  mod.rs  ohlc_data.rs  symbol.rs  trade_record.rs  trading_signal.rs
backend/src/migration/: _20240520_000001_create_tables.rs  mod.rs
backend/src/services/: mod.rs  ohlc_service.rs
frontend/: .gitignore  package-lock.json  package.json
frontend/src/types/: ohlc.ts
