[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["env-filter"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
sea-orm = { version = "2.0.0-rc.17", features = ["sqlx-sqlite", "chrono"] }
sea-orm-migration = { version = "2.0.0-rc.17", features = ["sqlx-sqlite"] }
sea-orm-cli = { version = "2.0.0-rc.17", features = ["sqlx-sqlite"] }
# sqlx-sqlite = { version = "0.7", features = ["runtime-tokio", "chrono"] }
